# Fluepdot

./: .gitlab-ci.yml  .gitmodules  Dockerfile  Dockerfile.build  LICENSE  README.md  getting_started.md
artwork/: fluepdot.cast  hexagon.scad  hexagon.stl  logo.kicad_mod
docs/: .gitignore  Doxyfile  requirements.txt
docs/source/: building.rst  command_line.rst  compiling.rst  conf.py  firmware_update.rst  flipdot_library.rst  getting_started.rst  http_api.rst  index.rst  snmp.rst
hardware/driver_board/: .gitignore  reverse-cache.lib  reverse.lib  reverse.pro  reverse.sch  sym-lib-table
hardware/fluepboard/: .gitignore  esp32_reset.sch  flipdot_control_unit.sch  flipdot_power_control.sch  fluepdot-cache.lib  fluepdot.dcm  fluepdot.kicad_pcb  fluepdot.lib  fluepdot.pro  fluepdot.sch  fp-lib-table  powersupply.sch  sym-lib-table  usb_serial.sch
hardware/fluepboard/fluepdot.pretty/: 744025150.kicad_mod  C169395.kicad_mod  CASE-B_3528.kicad_mod  Panasonic_H13.kicad_mod  SMD-PIND-6.6x7.1x3.0_1.6x3.0.kicad_mod  TerminalBlock_Phoenix_MPT-0,5-10-2.54_1x10_P2.54mm_Horizontal.kicad_mod  TerminalBlock_Phoenix_PTSM-0,5-2-2,5-V-SMD_1x02-1MP_P2.50mm_Vertical.kicad_mod  TerminalBlock_Phoenix_PTSM-0,5-3-2,5-V-SMD_1x03-1MP_P2.50mm_Vertical.kicad_mod  TerminalBlock_Phoenix_PTSM-0,5-5-2,5-V-SMD_1x05-1MP_P2.50mm_Vertical.kicad_mod  logo.kicad_mod  logo2.kicad_mod  (+1 more)
software/firmware/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
software/firmware/components/mcufont/: CMakeLists.txt
software/firmware/main/: CMakeLists.txt  Kconfig.projbuild  base64.c  bluetooth.c  cmd_font_rendering.c  cmd_host.c  cmd_ping.c  cmd_traceroute.c  console.c  console_commands.c  crc16.c  fluepdot_mib.c  font_rendering.c  font_rendinger_old.c  httpd.c  main.c  mdns_util.c  net_util.c  raw_api.c  snmp.c  system_configuration.c  wifi.c
software/firmware/main/include/: bluetooth.h  cmd_font_rendering.h  cmd_host.h  cmd_traceroute.h  console.h  console_commands.h  crc16.h  fluepdot_mib.h  font_rendering.h  httpd.h  main.h  mdns_util.h  net_util.h  raw_api.h  snmp.h  system_configuration.h  util.h  wifi.h
software/flippy/: .pylintrc  setup.py
software/hello_world/: .gitignore  CMakeLists.txt  flash_configuration.py  partitions.csv  sdkconfig
software/service_utility/: .gitignore  main.go
util/: FLUEPDOT.mib
(+101 files in other folders)
