idf_build_get_property(project_dir PROJECT_DIR)
idf_component_register(SRCS "main.c"
                            "net_util.c"
                            "system_configuration.c"
                            "wifi.c"
                            "crc16.c"
                            "httpd.c"
                            "console_commands.c"
                            "cmd_ping.c"
                            "cmd_host.c"
                            "cmd_traceroute.c"
                            "cmd_font_rendering.c"
                            "console.c"
                            "font_rendering.c"
                            "mdns_util.c"
                            "snmp.c"
                            "bluetooth.c"
                            "fluepdot_mib.c"
                            "raw_api.c"
                    INCLUDE_DIRS "." "include")
